Added is_staff permissions for detail view, added more info in user_detail view

--- a/TODO.txt
+++ b/TODO.txt
@@ -21,3 +21,8 @@
     - Users total average of all specific skills combined - DONE
     - Underperforming students (underperforming percentage) - DONE
     - Top attributes by average rating
+
+
+
+*Added is_staff permissions for detail view
+*
