Added edit profile, registration (profile image change/registration)

--- a/TODO.txt
+++ b/TODO.txt
@@ -20,3 +20,5 @@
     - Students by average mark(users by average mark of specific skill) - DONE
     - Users total average of all specific skills combined - DONE
     - Underperforming students (underperforming percentage) - DONE
+
+-Added edit profile, registration (profile image change/registration)
